Thu Sep 15 12:42:34 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* tao/Makefile.am:

	  Regenerated.

Thu Sep 15 14:16:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * tests/Bug_2234_Regression/server.cpp:

        Emulated exception incorrect macro used line 118/156.

Wed Sep 14 10:34:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * tests/Bug_2234_Regression/server.cpp:

        Correct another minor fussy compiler gripe.

Wed Sep 14 09:45:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * tests/Bug_2234_Regression/client.cpp:
        * tests/Bug_2234_Regression/server.cpp:

        Correct minor fussy compiler gripes for some gcc platforms.

Wed Sep 14 08:41:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:

        Fixed compile error.

Tue Sep 13 11:43:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * examples/Advanced/ch_3/client.cpp:
        * examples/Advanced/ch_3/server.cpp:
        * orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:
        * tests/Bug_1639_Regression/struct_client.cpp:

        Fixed for environments defining ACE_USES_OLD_IOSTREAMS
        (which unfortunately is the case for Windows x64 at the
        moment due to shortcomings in the Platform SDK).

Tue Sep 13 10:30:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * tao/AnyTypeCode/Any.cpp:

        * TAO_IDL/be/be_visitor_sequence/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_structure/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_union/any_op_cs.cpp:

        * tests/Bug_2234_Regression/Bug_2234_Regression.mpc:
        * tests/Bug_2234_Regression/Test.idl:
        * tests/Bug_2234_Regression/client.cpp:
        * tests/Bug_2234_Regression/run_test.pl:
        * tests/Bug_2234_Regression/server.cpp:

        This fixes bug 2234.
        The Portiable Interception call to arguments() attempts to create
        a read-only copy of all arguments passed into the current method.