@@ -22,7 +22,6 @@ PortableGroup_Request_Dispatcher::dispatch (TAO_ORB_Core *orb_core,
                                             TAO_ServerRequest &request,
                                             CORBA::Object_out forward_to
                                             ACE_ENV_ARG_DECL)
-  ACE_THROW_SPEC ((CORBA::SystemException))
 {
   // Check if the request contains a tagged profile
   if (request.profile ().discriminator () == GIOP::ProfileAddr)
