@@ -33,12 +33,13 @@ class TAO_PortableGroup_Loader;
  * @brief A class that strategizes the request dispatching procedure.
  *
  */
-class TAO_PortableGroup_Export PortableGroup_Request_Dispatcher :
-  public TAO_Request_Dispatcher
+class TAO_PortableGroup_Export PortableGroup_Request_Dispatcher
+  : public TAO_Request_Dispatcher
 {
   friend class TAO_GOA;
 
 public:
+
   /// Destructor.
   virtual ~PortableGroup_Request_Dispatcher (void);
 
@@ -48,8 +49,7 @@ public:
   virtual void dispatch (TAO_ORB_Core *orb_core,
                          TAO_ServerRequest &request,
                          CORBA::Object_out forward_to
-                         ACE_ENV_ARG_DECL)
-    ACE_THROW_SPEC ((CORBA::SystemException));
+                         ACE_ENV_ARG_DECL);
 
 private:
 
@@ -58,6 +58,7 @@ private:
 
   /// Registry for all of the group (multicast) acceptors.
   TAO_PortableGroup_Acceptor_Registry acceptor_registry_;
+
 };
 
 #include /**/ "ace/post.h"
